<resources>
    <string name="app_name">FoodSetGo</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phno">Phone</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Signup</string>
    <string name="already_signed_button">Already our Foodie? Login</string>
    <string name="new_signup_button">New to FoodSetGo? Signup</string>
    <string name="error_password">Password must contain atleast 8 characters.</string>
    <string name="location_button">Location</string>
    <string name="filter_title">Filter</string>
    <string name="product_title">Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="offers_button">Offers</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="popular_places">Popular Places</string>
</resources>
