<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<!-- Other components and views -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginLeft="@dimen/marginLeft"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/location_button"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:fontFamily="@font/neue_haas_grotesk_medium_65"
            android:textSize="20sp"
            android:letterSpacing="0"
            android:textColor="@color/goodBlack"
            android:textAllCaps="false"
            app:icon="@drawable/ic_location"
            app:iconGravity="textEnd"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offers_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentRight="true"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/offers_button"
            android:fontFamily="@font/neue_haas_grotesk_medium_65"
            android:textSize="20sp"
            android:letterSpacing="0"
            android:textColor="@color/goodBlack"
            android:textAllCaps="false"
            app:icon="@drawable/ic_offers"
            app:iconGravity="textStart"
            />

    </RelativeLayout>

    <!--<androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginBottom="10dp"
        android:background="@drawable/searchbar_bg"
        android:iconifiedByDefault="false"
        android:queryBackground="@color/transparent"
        />-->
    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="0dp"
        android:iconifiedByDefault="false"
        android:queryBackground="@color/transparent"
        app:mt_speechMode="false"
        app:mt_searchIconDrawable="@drawable/ic_search"
        app:mt_hint="@string/search_hint"
        app:mt_placeholder="@string/search_hint"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_places"
        android:textSize="20sp"
        android:textColor="@color/goodBlack"
        android:fontFamily="@font/neue_haas_grotesk_medium_65"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/recycler_popualar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_menu"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

</LinearLayout>

<com.google.android.material.bottomappbar.BottomAppBar
    android:id="@+id/bar"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="bottom"
    app:navigationIcon="@drawable/ic_menu"
    app:menu="@menu/bottomappbar_menu"
    app:backgroundTint="@color/colorPrimaryDark"
    app:fabCradleMargin="8dp"
    app:fabCradleRoundedCornerRadius="10dp"
    app:hideOnScroll="true"
    />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_anchor="@id/bar"
    android:src="@drawable/ic_shopping_cart"
    android:backgroundTint="@color/goodBlack"
    app:rippleColor="@color/white"
    app:tint="@color/white"
    app:maxImageSize="30dp"
    app:borderWidth="0dp"
    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>